# my_projects

./: DTAprts.py  Hse_Notice_Board.py  README.md  project 1.py
DTAprts/: Dockerfile  README.md  cian_data.json  db.sqlite3  parser.py  requirements.txt
DTAprts/main/: load_data.py  models.py  views.py
DTAprts/main/migrations/: 0001_initial.py  0002_auto_20250313_2302.py
DTAprts/news/: forms.py  models.py  urls.py
DTAprts/news/migrations/: 0001_initial.py
DTAprts/web_d/: asgi.py  settings.py
DesDistrict/: .gitignore  README.md  requirements.txt
DesDistrict/DesDistrict/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  requirements.txt
DesDistrict/DesDistrict/DesDistrict/: asgi.py  (+3 more)
DesDistrict/templates-for-Django-4-course-Home-main/: index.html
Hse_Notice_Board/: README.txt
ImageProcessor/: .gitignore  CMakeLists.txt  README.md  readme.md
ImageProcessor/include/: bmp_handler.h  image.h
ImageProcessor/include/filters/: blur.h  edge.h  filter.h  filter_factory.h  glass.h
ImageProcessor/src/: bmp_handler.cpp  image.cpp
ImageProcessor/src/filters/: blur.cpp  crop.cpp  edge.cpp  glass.cpp  grayscale.cpp  negative.cpp  sharpening.cpp
WeatherWarden/: .gitignore  README.md
WeatherWarden/WeatherWarden/: .dockerignore  Dockerfile  api.py  db.sqlite3  docker-compose.yml  dump.rdb  manage.py  requirements.txt
adgen/: .gitignore  requirements.txt
adgen/adgen/: cache.py  gpt.py  main.py  models.py
adgen/bot/: bot.py
image_processor/: image_processor.cpp  readme.md
image_processor/tests/: image_test.cpp
news/: views.py
web_d/: wsgi.py
(+75 files in other folders)
